--- a/src/screen.scss
+++ b/src/screen.scss
@@ -1,5 +1,6 @@
 @import "govuk-elements";
 @import "layout";
+@import "forms";
 
 $font-stack:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 
@@ -31,4 +32,31 @@ body {
 
 h1.heading-xlarge {
   margin: 1.25em 0 0.625em;
+}
+
+.vh {
+  @extend .visuallyhidden;
+}
+
+
+
+nav.prototype {
+  position: fixed;
+  background: $grey-2;
+  border-top: 1px solid $grey-1;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  text-align: center;
+  ul {
+    margin: 0 auto;
+    li {
+      display: inline-block;
+      a {
+        display: block;
+        padding: 5px 10px 10px;
+      }
+    }
+  }
 }
