User profile view

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -2,6 +2,8 @@
 @import "layout";
 @import "components";
 @import "forms";
+@import "tables";
+@import "notifications";
 @import "footer";
 
 $font-stack:  "Helvetica Neue", Helvetica, Arial, sans-serif;
