--- a/src/_components.scss
+++ b/src/_components.scss
@@ -3,3 +3,12 @@
   border: 1px solid $border-colour;
   border-left: 5px solid $department-for-education-websafe;
 }
+
+nav.subnav {
+  ul {
+    list-style: none;
+  }
+  li {
+    margin-bottom: 10px;
+  }
+}
