--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -45,3 +45,11 @@
     }
   }
 }
+
+aside {
+  border-top: 5px solid $department-for-education-websafe;
+  padding-top: 15px;
+  h2.heading-medium {
+    margin-top: .5em;
+  }
+}
