--- a/src/_components.scss
+++ b/src/_components.scss
@@ -1,13 +1,16 @@
 .card {
   padding: 15px;
-  border: 1px solid $border-colour;
   border-right: none;
   border-left: 5px solid $department-for-education-websafe;
+  h2 {
+    font-weight: bold;
+    font-size: 110%;
+  }
   p {
     margin-bottom: 3px;
   }
   @include media(tablet) {
-    border-right:1px solid $border-colour;
+
   }
 }
 
@@ -18,8 +21,8 @@ a.card {
   background: #eee;
   @include simple-animation;
   &:hover {
-    border-left-width: 7px;
-    padding-left: 13px;
+    border-left-width: 10px;
+    padding-left: 10px;
     background: #f5f5f5;
   }
 }
