Added nunjucks to help with mocking up views

--- a/app/views/forgotpassword.html
+++ b/app/views/forgotpassword.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title>Test</title>
-    <link rel="stylesheet" href="css/govuk/govuk-template.css">
-    <link rel="stylesheet" href="css/screen.css">
+    <title>Forgot Password</title>
+    <link rel="stylesheet" href="../../dist/css/govuk/govuk-template.css">
+    <link rel="stylesheet" href="../../dist/css/screen.css">
 </head>
 <body class="">
 
@@ -29,38 +29,39 @@
 
     <div id="global-header-bar"></div>
 
+
+
     <main id="content" role="main" tabindex="-1">
+
+        <a href="#" class="link-back">Back</a>
+
         <div class="grid-row">
-          <div class="column-two-thirds">
-            <h1 class="heading-xlarge">
-              Sign in
-            </h1>
-
-          </div>
+            <div class="column-two-thirds">
+                <h1 class="heading-xlarge">
+                    Forgotten password
+                </h1>
+                <p class="lede">Enter your work email address in the form below to reset your password.</p>
+            </div>
         </div>
-        <div class="cards">
 
-            <a href="#" class="card">
-              <h2>Start username/password</h2>
-              <p>Start the default username and password login journey</p>
-            </a>
-
-            <a href="#" class="card">
-              <h2>Interaction complete</h2>
-              <p>Show the interaction complete page</p>
-            </a>
-
-          <a href="#" class="card">
-            <h2>Start username/password</h2>
-            <p>Start the default username and password login journey</p>
-          </a>
-
-          <a href="#" class="card">
-            <h2>Interaction complete</h2>
-            <p>Show the interaction complete page</p>
-          </a>
-
+        <div class="row">
+            <div class="col-9">
+                <form method="get" action="forgotpasswordemail.html">
+                    <fieldset>
+                        <legend class="vh">Forgotten password</legend>
+                        <div class="form-group">
+                            <label class="form-label-bold" for="email">Email address</label>
+                            <input class="form-control" id="email" type="text">
+                        </div>
+                        <div class="form-submit">
+                            <button type="submit" class="button">Submit</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
+
+
     </main>
 
 </div>
