--- a/app/views/forgotpasswordemail.html
+++ b/app/views/forgotpasswordemail.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Forgot Password</title>
-    <link rel="stylesheet" href="css/govuk/govuk-template.css">
-    <link rel="stylesheet" href="css/screen.css">
+    <link rel="stylesheet" href="../../dist/css/govuk/govuk-template.css">
+    <link rel="stylesheet" href="../../dist/css/screen.css">
 </head>
 <body class="">
 
