--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,37 +1,7 @@
-<html>
-<head>
-    <title>Test</title>
-    <link rel="stylesheet" href="css/govuk/govuk-template.css">
-    <link rel="stylesheet" href="css/screen.css">
-</head>
-<body class="">
-
-<script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
-
-<div id="skiplink-container">
-    <div>
-        <a href="#content" class="skiplink"></a>
-    </div>
-</div>
-
-<div id="global-cookie-message">
-    <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
-        cookies</a></p>
-</div>
-
-<div class="wrapper">
-
-    <header role="banner" id="global-header" class="with-proposition">
-        <div class="header-wrapper">
-            <div class="identity">Department for Education</div>
-        </div>
-    </header>
-
-    <div id="global-header-bar"></div>
+{% extends "layout.html" %}
 
 
-
-    <main id="content" role="main" tabindex="-1">
+{% block content %}
         <div class="grid-row">
             <div class="column-two-thirds">
                 <h1 class="heading-xlarge">
@@ -69,32 +39,4 @@
             </div>
         </div>
 
-
-    </main>
-
-</div>
-
-<footer id="footer" role="contentinfo">
-    <div class="footer-wrapper">
-        <nav>
-            <ul>
-                <li><a href="cookies.html">Cookies</a></li>
-                <li><a href="privacy.html">Privacy policy</a></li>
-                <li><a href="terms.html">Terms and conditions</a></li>
-            </ul>
-        </nav>
-    </div>
-</footer>
-
-
-<nav class="prototype">
-    <ul>
-        <li>Example layouts:</li>
-        <li><a href="index.html">Grid</a></li>
-        <li><a href="login.html">Login</a></li>
-    </ul>
-</nav>
-
-
-</body>
-</html>
+{% endblock %}
