--- a/app/views/change-password-current.html
+++ b/app/views/change-password-current.html
@@ -2,6 +2,9 @@
 
 
 {% block content %}
+<script src="/static/javascript/vendors/jquery.js"></script>
+<script src="/static/javascript/Validator.js"></script>
+
         <div class="grid-row">
             <div class="column-two-thirds">
                 <h1 class="heading-xlarge">
@@ -12,15 +15,15 @@
 
         <div class="row">
             <div class="col-9">
-                <form method="post" action="/change-password-new">
+                <form method="post" action="/change-password-new" id="form-current-password" novalidate="novalidate">
                   <fieldset>
                       <legend class="vh">Enter your current password</legend>
                       <div class="form-group">
                           <label class="form-label-bold" for="current-password">Enter your current password</label>
-                          <input class="form-control" id="current-password" name="current-password" type="password" required="required">
+                          <input class="form-control" id="current-password" name="current-password" type="password" required="required" minlength="3">
                       </div>
                       <div class="form-submit">
-                          <button type="submit" class="button">Continue</button>
+                          <button type="submit" class="button button-full">Continue</button>
                       </div>
                   </fieldset>
                 </form>
