--- a/app/views/change-password-new.html
+++ b/app/views/change-password-new.html
@@ -1,4 +1,4 @@
-\{% extends "layout.html" %}
+{% extends "layout.html" %}
 
 
 {% block content %}
@@ -16,12 +16,17 @@
               <fieldset>
                 <legend class="vh">Enter your current password</legend>
                 <div class="form-group">
-                  <label for="new-password">
-                    <span class="form-label-bold">Create new password</span>
-                    <span class="form-hint">
-                      sdsfd
-                    </span>
-                  </label>
+                  <label for="new-password" class="form-label-bold">Create new password</label>
+                    <div class="form-hint">
+                        <p>Your password must:</p>
+                        <ul class="list-bullet">
+                          <li>be at least 8 characters</li>
+                          <li>have at least one number (0-9)</li>
+                      <li>have at least one letter (a-z)</li>
+                      <li>not contain common words (e.g. password)</li>
+                    </ul>
+                    </div>
+
                   <input class="form-control" id="new-password" name="new-password" type="password" required="required">
                 </div>
                 <div class="form-group">
