--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -3,6 +3,16 @@
 .gds-status-bar {
   padding: 10px 0;
   border-bottom: 1px solid $border-colour;
+  margin: 0 15px;
+  @include media(tablet) {
+    margin: 0 30px;
+    max-width: 960px;
+  }
+  @include media($desktop) {
+    margin: 0 auto;
+
+  }
+
   p {
     display: table;
     margin: 0;
