Added JS files and new layout file for user profile

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -55,6 +55,7 @@
   <div class="footer-wrapper">
     <nav>
       <ul>
+        <li><a href="help.html">Help</a></li>
         <li><a href="cookies.html">Cookies</a></li>
         <li><a href="privacy.html">Privacy policy</a></li>
         <li><a href="terms.html">Terms and conditions</a></li>
@@ -71,6 +72,7 @@
     <li><a href="login">Login</a></li>
     <li><a href="user-profile-access-request">User Access</a></li>
     <li><a href="change-password-current">Password</a></li>
+    <li><a href="user-profile">Profile</a></li>
   </ul>
 </nav>
 
