--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,23 +3,20 @@
 
 {% block content %}
         <div class="grid-row">
-            <div class="column-two-thirds">
+            <div class="col-9">
                 <h1 class="heading-xlarge">
-                    Sign in
+                  Sign in to access DfE services
                 </h1>
-                <p class="lede">Sign in using the form below to access DfE services.</p>
             </div>
         </div>
-
         <div class="row">
-            <div class="col-6">
-                <h2 class="heading-medium">Existing user</h2>
+            <div class="col-8">
                 <form method="post" action="login.html?">
-                  <fieldset class="highlight">
+                  <fieldset>
                       <legend class="vh">Sign in form</legend>
                       <div class="form-group">
                           <label class="form-label-bold" for="first-name-2">Email address</label>
-                          <input class="form-control" id="first-name-2" name="first-name-2" type="text" required="required">
+                          <input class="form-control" id="first-name-2" name="first-name-2" type="email" required="required">
                       </div>
                       <div class="form-group">
                           <label class="form-label-bold" for="last-name-2">Password</label>
@@ -28,16 +25,21 @@
                       <div class="panel">
                           <p>By continuing you accept the <a href="#">terms and conditions</a>.</p>
                       </div>
-
                       <div class="form-submit">
                           <button type="submit" class="button">Sign in</button>
                       </div>
                   </fieldset>
                 </form>
             </div>
-            <div class="col-6">
-                <h2 class="heading-medium">New user</h2>
-                <p>If you are a new user...</p>
+            <div class="col-4">
+              <aside>
+                <h2 class="heading-medium">Problems signing in?</h2>
+                <nav class="subnav">
+                  <ul>
+                    <li><a href="#">Forgotten your password?</a></li>
+                  </ul>
+                </nav>
+              </aside>
             </div>
         </div>
 
