--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -32,13 +32,26 @@
     </div>
   </header>
 
-  <div id="global-header-bar"></div>
-
-  <div class="gds-status-bar">
-    <p>
-      <strong class="phase-tag">Beta</strong>
-      <span>This is a beta service</span>
-    </p>
+  <div class="header-user">
+    <div class="header-inner">
+      <div class="service-info">
+        <div class="phase-banner-beta">
+          <p>
+            <strong class="phase-tag">BETA</strong>
+            <span>This is a new service – your <a href="#" target="_blank">feedback</a> will help us to improve it. </span>
+          </p>
+        </div>
+      </div>
+      <div class="account-information" role="navigation">
+        <nav id="user-nav">
+          <ul role="menubar">
+            <li><a href="/help">Help</a></li>
+            <li><a href="/user-profile" role="menuitem">Profile</a></li>
+            <li><a href="/signout" role="menuitem">Sign out</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </div>
 
   <main class="elements-index" id="content" tabindex="-1">
