--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -43,6 +43,7 @@
         </div>
       </div>
       <div class="account-information" role="navigation">
+        <p class="signed-in-as"><span class="vh">You are signed in as</span> James King</p>
         <nav id="user-nav">
           <ul role="menubar">
             <li><a href="/help">Help</a></li>
