--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -5,6 +5,7 @@
 @import "components";
 @import "forms";
 @import "tables";
+@import "typography";
 @import "notifications";
 @import "header";
 @import "footer";
