--- a/app/views/user-profile.html
+++ b/app/views/user-profile.html
@@ -5,44 +5,35 @@
 
         <div class="grid-row">
             <div class="column-two-thirds">
-                <h1 class="heading-xlarge">
-                    Jane Murphy
+                <h1 class="heading-small">
+                    User profile
                 </h1>
+                <h2 class="heading-xlarge">
+                  Jane Murphy
+                </h2>
             </div>
         </div>
 
         <div class="row">
             <div class="col-8">
                 <h2 class="heading-medium">User details</h2>
-                <table>
-                    <tr>
-                        <th scope="row">First name</th>
-                        <td>Jane</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Last name</th>
-                        <td>Murphy</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Organisation</th>
-                        <td>St Patrick's school, Earlsfield (URN: 654321)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Role</th>
-                        <td>Management information officer</td>
-                    </tr>
-                </table>
-                <h2 class="heading-medium">Services user has access to</h2>
-                <p>The user doesn't have access to any services.</p>
-
+                <dl class="inline">
+                    <dt>First name</dt>
+                    <dd>Jane</dd>
+                    <dt>Last name</dt>
+                    <dd>Murphy</dd>
+                    <dt>Email</dt>
+                    <dd>jane.murphy@stpatricksschool.co.uk</dd>
+                </dl>
             </div>
             <div class="col-4">
                 <aside>
                     <h2 class="heading-medium">Profile actions</h2>
                     <nav class="subnav">
                         <ul>
-                            <li><a href="suspend.html">Suspend user</a></li>
-                            <li><a href="give-access.html">Give user access to a service</a></li>
+                            <li><a href="user-profile-edit.html">Change my details</a></li>
+                            <li><a href="password-edit.html">Change my password</a></li>
+                            <li><a href="user-profile-delete.html">Delete my account</a></li>
                         </ul>
                     </nav>
                 </aside>
