--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.phase-banner-alpha, .phase-banner-beta {
+  margin-bottom: -1px;
+}
+
 #user-nav {
   @include media(tablet) {
     font-size: 16px;
