Updated styles for show password control

--- a/app/views/change-password-current.html
+++ b/app/views/change-password-current.html
@@ -2,8 +2,7 @@
 
 
 {% block content %}
-<script src="/static/javascript/vendors/jquery.js"></script>
-<script src="/static/javascript/Validator.js"></script>
+
 
         <div class="grid-row">
             <div class="column-two-thirds">
@@ -21,7 +20,9 @@
                       <div class="form-group">
                           <label class="form-label-bold" for="current-password">Enter your current password</label>
                           <span class="error-message"></span>
+                        <div class="show-password">
                           <input class="form-control" id="current-password" name="current-password" type="password" required="required" pattern=".{8,}" data-validation="Enter a password in the following format">
+                        </div>
                       </div>
                       <hr>
                       <div class="form-group">
@@ -35,12 +36,15 @@
                             <li>not contain common words (e.g. password)</li>
                           </ul>
                         </div>
-
-                        <input class="form-control" id="new-password" name="new-password" type="password" required="required">
+                        <div class="show-password">
+                          <input class="form-control" id="new-password" name="new-password" type="password" required="required">
+                        </div>
                       </div>
                       <div class="form-group">
                         <label class="form-label-bold" for="confirm-password">Confirm your new password</label>
-                        <input class="form-control" id="confirm-password" name="confirm-password" type="password" required="required">
+                        <div class="show-password">
+                          <input class="form-control" id="confirm-password" name="confirm-password" type="password" required="required">
+                        </div>
                       </div>
                       <div class="form-submit">
                           <button type="submit" class="button">Continue</button>
