--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -90,6 +90,8 @@
   </ul>
 </nav>
 
+<script src="/static/javascript/vendors/jquery.js"></script>
+<script src="/static/javascript/app.js"></script>
 
 </body>
 </html>
