--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -87,7 +87,7 @@ div.show-password {
     top: 0;
     right:0;
     bottom: 0;
-    border: 2px solid #0b0c0c;
+    border: 2px solid $black;
     background: $grey-4;
     label {
       width: 4em;
