Convert spinner CSS to SCSS

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,4 +108,19 @@
           <p>The passwords you entered did not match</p>
         </div>
 
+<div class="spinner">
+  <div class="spinner-circle1 spinner-child"></div>
+  <div class="spinner-circle2 spinner-child"></div>
+  <div class="spinner-circle3 spinner-child"></div>
+  <div class="spinner-circle4 spinner-child"></div>
+  <div class="spinner-circle5 spinner-child"></div>
+  <div class="spinner-circle6 spinner-child"></div>
+  <div class="spinner-circle7 spinner-child"></div>
+  <div class="spinner-circle8 spinner-child"></div>
+  <div class="spinner-circle9 spinner-child"></div>
+  <div class="spinner-circle10 spinner-child"></div>
+  <div class="spinner-circle11 spinner-child"></div>
+  <div class="spinner-circle12 spinner-child"></div>
+</div>
+
 {% endblock %}
