--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="/static/css/govuk/fonts.css">
   <link rel="stylesheet" href="/static/css/govuk/govuk-template.css">
   <link rel="stylesheet" href="/static/css/screen.css">
+
+  <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/static/images/apple-icon-167x167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" href="/static/images/apple-icon.png">
+
 </head>
 <body class="">
 
