--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>DfE</title>
@@ -16,6 +17,8 @@
   <link rel="apple-touch-icon" sizes="167x167" href="/static/images/apple-icon-167x167.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/static/images/apple-icon-152x152.png">
   <link rel="apple-touch-icon" href="/static/images/apple-icon.png">
+
+  <meta property="og:image" content="/static/images/opengraph-image.png">
 
 </head>
 <body class="">
