Portal page design

--- a/app/views/concepts/portal/services.html
+++ b/app/views/concepts/portal/services.html
@@ -35,11 +35,11 @@
     <ul class="service-list">
       <li class="service-mtc">
         <p>Multiplication tables check</p>
-        <span>Request sent to Steve Jones (steve.jones@) on 30th October 2017</span>
+        <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
       <li class="service-eb">
         <p>Edubase</p>
-        <span>Request sent to Steve Jones (steve.jones@) on 30th October 2017</span>
+        <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
     </ul>
 
