--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -8,3 +8,12 @@ table {
     font-weight: bold;
   }
 }
+
+.empty-state {
+  background: $grey-4;
+  padding: 15px;
+  text-align: center;
+  p {
+    margin: 0;
+  }
+}
