--- a/app/views/concepts/portal/services-v3.html
+++ b/app/views/concepts/portal/services-v3.html
@@ -1,58 +1,58 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+
+
+
 <div class="grid-row">
-  <div class="col-8">
+  <div class="col-9">
     <h1 class="heading-xlarge">
       Access DfE services
     </h1>
     <div class="heading-group">
-    <h2 class="heading-medium">
-      Your DfE services
-    </h2><a href="viewall">View available DfE services</a>
-  </div>
-    <ul class="service-list">
+      <h2 class="heading-medium">
+        Your DfE services
+      </h2><a href="viewall">View available DfE services</a>
+    </div>
 
+    <ul class="services">
       <li>
-        <a href="#" class="under-construction">
-          <h3><span class="service-title">K2S</span> <span class="role-name">End user</span></h3>
-          <span></span>
-        </a>
+        <span class="service-tab">
+          <a class="service-k2s" href="#">
+            <h2>Key to Success</h2>
+          </a>
+          <ul class="quick-links">
+            <li><a href="information" class="info">View more information</a> </li>
+            <li><a href="information">Manage users and access</a> </li>
+          </ul>
+        </span>
       </li>
       <li>
-        <a href="#" class="under-construction">
-          <h3><span class="service-title">K2S</span> <span class="role-name">End user</span></h3>
-          <span></span>
-        </a>
+        <span class="service-tab">
+          <a class="service-k2s" href="#">
+            <h2>Collect</h2>
+          </a>
+          <ul class="quick-links">
+            <li><a href="information" class="info">View more information</a> </li>
+          </ul>
+        </span>
+      </li>
+      <li>
+        <span class="service-tab">
+          <a class="service-k2s" href="#">
+            <h2>MTC</h2>
+          </a>
+          <ul class="quick-links">
+            <li><a href="information" class="info">View more information</a> </li>
+          </ul>
+        </span>
       </li>
 
-    </ul>
-    <ul class="service-list-blocks">
-      <li>
-        <a href="dd" class="service service-k2s">
-          <h2>Key to Success</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
-        </a>
-        <a href="manage" class="manage">
-          Manage access and users for Key to Success
-        </a>
-      </li>
-      <li>
-        <a class="service service-collect" href="ss#">
-            <h2>COLLECT</h2>
-            <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
-        </a>
-      </li>
-      <li>
-        <a class="service service-gias" href="aa">
-          <h2>Get information about schools</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
-        </a>
-      </li>
     </ul>
 
     <h3 class="heading-medium">You have requested access to the following services</h3>
-    <h4 class="heading-small school">Saint Patricks School</h4>
+    <h4 class="heading-small school">Saint Patrick's School</h4>
     <ul class="service-list-table">
       <li class="service-mtc">
         <p>Multiplication tables check</p>
@@ -74,5 +74,181 @@
    </ul>
   </div>
 </div>
+
+
+<div class="overlay">
+  <div class="modal">
+    <h2 class="heading-large">
+      Key to Success <span class="heading-secondary">Information</span>
+    </h2>
+    <dl class="rows condensed">
+      <dt>Organisation</dt>
+      <dd>Saint Patrick's School</dd>
+      <dt>You last access this service</dt>
+      <dd>21st October 2017 at 13:10</dd>
+      <dt>Approver(s)</dt>
+      <dd>
+        <ul>
+          <li>Steve Blue (<a href="mailto:">steve.blue@stpatricks.schools.gov.uk</a>)</li>
+          <li>Sarah Green (<a href="mailto:">sarah.green@stpatricks.schools.gov.uk</a>)</li>
+          <li>Edward Yellow (<a href="mailto:">edward.yellow@stpatricks.schools.gov.uk</a>)</li>
+          <li><a href="#">+ 2 more people</a> </li>
+        </ul>
+      </dd>
+      <dt>Description</dt>
+      <dd>This section of the site provides secure access for Local Authority users to confidential pupil data via search facilities and downloads.</dd>
+    </dl>
+  </div>
+</div>
+
+{% endblock %}
+
+
+{% block styles %}
+
+<style>
+
+
+.overlay {
+  background: rgba(0,0,0,.4);
+  position: fixed;
+  z-index:9998;
+  top: 0;
+  left:0;
+  right:0;
+  bottom:0;
+  display: none;
+}
+
+.modal {
+  background: #fff;
+  width: 600px;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  right: 50%;
+  margin: -200px 0 0 -330px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+.modal h2 {
+  margin-top: 0;
+}
+
+ul.services {
+  margin: 0 -10px;
+  overflow: hidden;
+  }
+
+ul.services > li {
+  float: left;
+  width: 50%;
+  padding: 3px 10px 7px 10px;
+  box-sizing: border-box;
+  position: relative;
+  min-height:125px;
+}
+
+ul.services > li span.service-tab {
+  background: #F8F8F8;
+  display: block;
+}
+
+ul.services > li span.service-tab > a {
+  padding: 10px 12px;
+  display: block;
+  border-left: 5px solid #005ea5;
+}
+
+ul.services > li span.service-tab > a:visited {
+  color: #005ea5;
+}
+
+ul.services li h2 {
+  font-weight: bold;
+  font-size: 1.1em;
+ }
+
+ul.quick-links {
+  font-size: 15px;
+  overflow: hidden;
+}
+
+ul.quick-links li {
+  border-top:1px solid #fff;
+}
+
+ul.quick-links li a {
+  display: block;
+  color: #0b0c0c;
+  padding: 6px 12px 5px;
+  border-left: 5px solid #005ea5;
+  background: #eee;
+  text-decoration: none;
+}
+
+ul.service-list li a:visited {
+  color: #005ea5;
+}
+
+ul.service-list li a.info {
+  height: 30px;
+  width: 30px;
+  background: #347ca9;
+  overflow: hidden;
+  position: absolute;
+  top:3px;
+  right:10px;
+  border:0;
+  padding:0;
+  text-indent: -9999px;
+}
+
+ul.service-list li a h2 {
+  font-weight:bold;
+  text-decoration: underline;
+}
+
+ul.service-list-table {
+
+}
+
+ul.service-list-table li {
+padding: 10px 0;
+border-top: 1px solid #ddd;
+}
+
+ul.service-list-table li p {
+font-weight: bold;
+margin:0;
+}
+
+ul.service-list-table li span {
+font-size: 17px;
+color: #555;
+}
+
+</style>
+
+{% endblock %}
+
+
+{% block js %}
+
+<script>
+
+  $('.info').on('click', function(e) {
+    $('.overlay').show();
+    e.preventDefault();
+  });
+
+  $('.overlay').on('click', function() {
+    $(this).hide();
+  });
+
+</script>
 
 {% endblock %}
