--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -13,3 +13,9 @@ dl.rows {
     margin-bottom: 15px;
   }
 }
+
+.spacer-heading {
+  margin-top: 15px;
+  margin-bottom: 0;
+  border-bottom: 2px solid $border-colour;
+}
