--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -15,7 +15,8 @@ dl.rows {
 }
 
 .spacer-heading {
-  margin-top: 15px;
+  margin-top: 30px;
   margin-bottom: 0;
+  padding-bottom: 5px;
   border-bottom: 2px solid $border-colour;
 }
