--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -99,10 +99,11 @@
   <ul>
     <li>Example layouts:</li>
     <li><a href="/">Grid</a></li>
-    <li><a href="login">Login</a></li>
-    <li><a href="user-profile-access-request">User Access</a></li>
-    <li><a href="change-password-current">Password</a></li>
-    <li><a href="user-profile">Profile</a></li>
+    <li><a href="/login">Login</a></li>
+    <li><a href="/user-profile-access-request">User Access</a></li>
+    <li><a href="/change-password-current">Password</a></li>
+    <li><a href="/user-profile">Profile</a></li>
+    <li><a href="/concepts/portal/services">Services </a> <a href="/concepts/portal/services-v2">v2</a> <a href="/concepts/portal/services-v3">v3</a> </li>
   </ul>
 </nav>
 
